<resources>
    <string name="app_name">Telehost</string>

    <string name="base_url">https://dev.telehost.ng/api/</string>
    <string name="websocker_url">ws://socket.telehost.ng/websocket/</string>

    <string name="notification_key">eyJhbGciOiJIUzUxMiJ9.eyJzdWIiOiJhZG1pbiIsImF1dGgiOiJST0xFX0FETUlOLFJPTEVfVVNFUiIsImV4cCI6MTYwNDY5ODcwN30.nux8WRZ1Uo6voPhK_8hROhX6jZqnIbp_7j55cZivcoTKV4Jn12MzbZuuyD3JgCHJLRJxYSTRSf1OHi3ajLCS4g</string>

    <string name="database">com.telehost.database</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_introduction">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in ultrices orci, vitae mollis magna.</string>
    <string name="text_login_description">Welcome Back, Fill In Your Details To Login.</string>
    <string name="text_register_description">Fill in these Details to create Your account.</string>

    <string name="title_signup">Registration</string>

    <string name="first_name_placeholder">First Name</string>
    <string name="last_name_placeholder">Last Name</string>
    <string name="email_placeholder">Email Address</string>
    <string name="phone_placeholder">1234567890</string>
    <string name="password_placeholder">Password</string>
    <string name="country_placeholder">Country</string>

    <string name="button_login">Login</string>
    <string name="button_signup">Create Account</string>
    <string name="button_send_message">Send message</string>

    <string name="menu_home">Home</string>
    <string name="menu_dialer">Dialer</string>
    <string name="menu_sms">Sms</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_activate">Activate Devices</string>

    <string name="menu_others">Others</string>
    <string name="menu_terms">Terms and privacy</string>
    <string name="menu_logout">Logout</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!--FragmentHome string data -->
    <string name="press_again_exit_app">Press again to exit</string>
    <string name="logout_title">Logout</string>
    <string name="login_title">Login</string>
    <string name="title_menu_home">Home</string>
    <string name="title_menu_topic">Topic</string>
    <string name="title_menu_notif">Notification</string>
    <string name="title_menu_saved">Saved</string>
    <string name="title_menu_more">More Apps</string>
    <string name="title_menu_rate">Rate This</string>
    <string name="title_menu_about">About</string>
    <string name="title_menu_device_activation">Devices</string>
    <string name="logout_confirmation_text">Are you sure want to logout?</string>
    <string name="msg_app_out_date">Application is out of date, please update to get latest version</string>
    <string name="msg_no_internet">Please check your Internet connection and try again</string>
    <string name="title_info">Info</string>
    <string name="section_topics">Topics</string>
    <string name="section_featured">Featured</string>
    <string name="section_recent">Recent</string>
    <string name="news_type_gallery">Gallery</string>
    <string name="news_type_video">Video</string>
    <string name="news_type_article">Article</string>

    <!--FragmentLogin string data -->
    <string name="title_login">Login</string>
    <string name="header_login">Enter your valid credentials</string>
    <string name="title_dialog_forgot_password">Forgot Password</string>
    <string name="hint_input_forgot">Registered Email</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_bt_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="login_email_warning">Email cannot empty</string>
    <string name="login_email_invalid">Invalid email</string>
    <string name="login_password_warning">Password cannot empty</string>
    <string name="login_success_info">Login Successfully!</string>
    <string name="account_disabled">Account has been disabled</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="email_not_registered">Email not registered</string>
    <string name="email_sent_info">Email has been sent!</string>

    <!--FragmentRegister string data -->
    <string name="title_register">Register</string>
    <string name="REGISTER">REGISTER</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_name_empty">Name cannot empty</string>
    <string name="profile_email_empty">Email cannot empty</string>
    <string name="profile_email_invalid">Invalid email</string>
    <string name="profile_password_empty">Password cannot empty</string>
    <string name="profile_password_invalid">Password alphanumeric only</string>
    <string name="register_success">Register Successfully !</string>
    <string name="email_in_use">Email already in use</string>
    <string name="account_not_found">Account not found or inactive</string>
    <string name="form_action_update">UPDATE</string>
    <string name="form_action_register">REGISTER</string>
    <string name="form_title_update">Update</string>
    <string name="form_title_register">Register</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="register_term_note">By creating an account, you agree with our</string>
    <string name="login_term_note">By login into an account, you agree with our</string>

    <!--FragmentActivate string data -->
    <string name="text_bt_activate">Activate</string>
    <string name="text_sim_slot">Sim slot</string>
    <string name="text_duration">Duration</string>
    <string name="text_empty" />
    <string name="text_queue">Pending tasks: </string>
    <string name="duration_warning">Duration not selected</string>
    <string name="sim_slot_warning">Sim slot not selected</string>

    <!--FragmentSettings string data -->
    <string name="title_settings">Settings</string>
    <string name="app_version">Build Version</string>
    <string name="developer_email">dev.dream.space@gmail.com</string>
    <string name="pref_title_contact_us">Contact Us</string>
    <string name="copyright">Copyright © 2019 Dream Space. All right reserved</string>
    <string name="setting_group_profile">Profile</string>
    <string name="setting_group_notif">Notifications</string>
    <string name="setting_group_display">Display</string>
    <string name="setting_group_others">Other</string>
    <string name="setting_subtitle_name">Name</string>
    <string name="setting_subtitle_email">Email</string>
    <string name="setting_title_notif">Push Notifications</string>
    <string name="setting_title_ringtone">Ringtone</string>
    <string name="setting_title_vibrate">Vibrate</string>
    <string name="setting_title_theme">Theme</string>
    <string name="setting_title_enable_cache">Enable Image Cache</string>
    <string name="setting_title_cache">Clear Image Cache</string>
    <string name="setting_title_copyright">Copyright</string>
    <string name="setting_title_contact_us">Contact Us</string>
    <string name="setting_title_build">Build Version</string>
    <string name="setting_title_term">Term &amp; Policies</string>
    <string name="setting_title_rate">Rate This</string>
    <string name="setting_title_more_apps">More Apps</string>
    <string name="setting_title_intro">Introduction</string>
    <string name="setting_title_about">About</string>
    <string name="version_unknown">Unknown</string>
    <string name="email_copied">Email Copied to Clipboard</string>
    <string name="dialog_confirm_title">Confirmation</string>
    <string name="message_clear_image_cache">Are you sure want to clear image cache?</string>
    <string name="message_after_clear_image_cache">Image cache successfully clear</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="activate_device">Activate Device</string>
    <string name="ringtone_default">Default</string>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>Auto</item>
    </string-array>

    <!--FragmentDashboard string data -->
    <string name="general_overview_title">General Overview</string>
    <string name="transaction_overview_title">Transaction Overview</string>
    <string name="wallet_title">Wallet</string>
    <string name="wallet_description">Available balance</string>
    <string name="routes_title">Routes</string>
    <string name="routes_description">Active routes</string>
    <string name="ussd_title">Ussd</string>
    <string name="ussd_description">Number of dialed Ussd</string>
    <string name="sms_title">Sms</string>
    <string name="sms_description">Number of sent Sms</string>

    <string name="FEATURED">Featured</string>
    <string name="MORE">MORE</string>
    <string name="SEE_ALL">SEE ALL</string>
    <string name="OK">OK</string>
    <string name="DEFAULT">DEFAULT</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="APPLY">APPLY</string>
    <string name="RESET">RESET</string>
    <string name="SETTING">SETTING</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CLOSE">CLOSE</string>
    <string name="UPDATE">UPDATE</string>
    <string name="DISMISS">DISMISS</string>
    <string name="HIDE">HIDE</string>
    <string name="RETRY">RETRY</string>
    <string name="TRY_AGAIN">TRY AGAIN</string>
    <string name="DETAILS">DETAILS</string>
    <string name="FAILED">FAILED</string>
    <string name="DELETE">DELETE</string>
    <string name="OPEN">OPEN</string>
    <string name="SAVE">SAVE</string>
    <string name="NEXT">NEXT</string>
    <string name="SKIP">SKIP</string>
    <string name="SEND">SEND</string>

    <string name="namePattern">[A-Z][a-zA-Z]*</string>
    <string name="nameRule">Only characters expected</string>
    <string name="emailRule">Invalid Email address provided</string>
    <string name="phoneRule">Invalid phone number provided</string>
    <string name="passwordLengthRule">Password must be more than 8 characters</string>
    <string name="passwordRule">Password must be more than 8 characters, contain on or more uppercase, lowercase and number</string>
    <string name="passwordPattern">((?=.*[a-z])(?=.*\\d)(?=.*[A-Z])(?=.*[@#$%!]).{8,40})</string>
    <string name="passwordLengthPattern">(.{8,40})</string>
</resources>
