<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_login">

    <data>

        <import type="ng.myflex.telehost.common.binding.EditTextBinding" />

        <import type="ng.myflex.telehost.common.binding.TextViewBinding" />

        <variable
            name="viewModel"
            type="ng.myflex.telehost.ui.account.login.LoginViewModel" />

        <variable
            name="validation"
            type="com.basgeekball.awesomevalidation.AwesomeValidation" />

        <variable
            name="loading"
            type="Boolean" />

        <variable
            name="error"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_xxlarge"
        android:paddingBottom="@dimen/spacing_xxlarge">

        <ImageView
            android:layout_width="@dimen/abc_action_bar_content_inset_with_nav"
            android:layout_height="@dimen/abc_action_bar_content_inset_with_nav"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_host" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_xlarge" />

        <TextView
            android:id="@+id/text_error"
            style="@style/Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@{error}"
            android:textAlignment="center"
            android:textColor="@color/colorDanger"
            app:display="@{error}" />

        <EditText
            android:id="@+id/et_email"
            style="@style/TextInput"
            android:enabled="@{!loading}"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@={viewModel.form.email}"
            app:error="@{@string/emailRule}"
            app:validate="@{validation}" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle">

            <EditText
                android:id="@+id/et_password"
                style="@style/TextInput"
                android:enabled="@{!loading}"
                android:hint="@string/hint_password"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={viewModel.form.password}"
                app:error="@{@string/passwordLengthRule}"
                app:match="@{@string/passwordLengthPattern}"
                app:validate="@{validation}" />

            <ImageButton
                android:id="@+id/show_pass"
                android:layout_width="@dimen/abc_action_button_min_width_overflow_material"
                android:layout_height="@dimen/abc_action_button_min_width_overflow_material"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:enabled="@{!loading}"
                android:src="@drawable/toggle_password_view"
                android:tint="@color/grey_20" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xmlarge"
            android:layout_marginBottom="@dimen/spacing_xlarge">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:enabled="@{!loading}"
                android:text="@string/text_bt_login" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible" />

        </RelativeLayout>

    </LinearLayout>

</layout>