<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="account"
            type="ng.myflex.telehost.domain.Account" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundDarker"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_mlarge"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:layout_marginRight="@dimen/spacing_mlarge"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            android:text="@string/setting_group_profile"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_20"
                            app:fontFamily="sans-serif-medium" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:minHeight="?attr/actionBarSize"
                            android:orientation="vertical"
                            android:paddingLeft="@dimen/spacing_mlarge"
                            android:paddingRight="@dimen/spacing_mlarge">

                            <TextView
                                android:id="@+id/name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{account.firstName + ` ` + account.lastName}"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/colorTextAction" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/setting_subtitle_name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_20" />

                        </LinearLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/lyt_avatar"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="@dimen/spacing_mlarge"
                        android:layout_marginRight="@dimen/spacing_mlarge"
                        android:background="@drawable/avatar_placeholder_click"
                        android:clickable="false"
                        android:padding="@dimen/spacing_small">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="@dimen/spacing_mlarge"
                            android:tint="@color/grey_20"
                            app:srcCompat="@drawable/ic_photo" />

                        <ImageView
                            android:id="@+id/avatar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </RelativeLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_mlarge"
                    android:paddingRight="@dimen/spacing_mlarge">

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{account.email}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorTextAction" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_subtitle_email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_20" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_mlarge"
                    android:paddingRight="@dimen/spacing_mlarge">

                    <TextView
                        android:id="@+id/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{account.phone}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorTextAction" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_subtitle_email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_20" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_medium"
                    android:paddingRight="@dimen/spacing_medium">

                    <TextView
                        android:id="@+id/activate_device"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:padding="@dimen/spacing_large"
                        android:text="@string/activate_device"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_60"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/login_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:padding="@dimen/spacing_large"
                        android:text="@string/logout_title"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_60"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_large"
                android:background="@color/colorBackgroundDarker" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_middle">

                <TextView
                    android:id="@+id/build_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_title_build"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>